@@ -1,3 +1,8 @@
+2007-07-25  Ben Motmans <ben.motmans@gmail.com>
+
+	* NpgsqlSchemaProvider.cs, NpgsqlDbFactory.cs: improved metadata support
+	* NpgsqlPooledDbConnection.cs: expose the GetSchema method of the internal connection
+
 2007-07-18  Ben Motmans <ben.motmans@gmail.com>
 
 	* NpgsqlSchemaProvider.cs: SupportsSchemaOperation implementation, use of strongly typed
